--- a/glob/index.html
+++ b/glob/index.html
@@ -53,12 +53,13 @@
   <script src="script.js"></script>
   -->
   <script src="bundle.js"></script>
+  <script src="/session.js"></script>
 
 </head>
 
 <body>
 
-<h1>%roshambo</h1>
+<h1>%roshambizzy</h1>
 <p style="font-family:monospace">:: [] >%</p>
 <img src="img/plungerfish.jpg" width="50px" style="border-radius:10px;">
 <br>
@@ -126,5 +127,7 @@
   </div>
 
 </div>
+
+
 </body>
 </html>
