improve web/dojo ui & a few app changes

--- a/glob/help.html
+++ b/glob/help.html
@@ -4,6 +4,7 @@
 <head>
   <title>%roshambo</title>
 
+  <link rel="shortcut icon" href="img/bacwyls.png" type="image/x-icon">
   <link rel="stylesheet" href="styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -28,15 +29,14 @@
 <h1> Help </h1>
 <p> roshambo requires two active players. </p>
 <p> Find someone to play with, enter their name, and decide on a time when you will both SHOOT. </p>
-<p> If you both press SHOOT at around the same time, results should appear shortly thereafter. </p>
-<p> You'll know the game is successfully in progress if a time string pops up in your game status. </p>
-<p> You should get the result of your game within a few seconds of that time string, otherwise something has gone wrong. </p>
+<p> Then, press SHOOT at around the same time. </p>
+<p> You'll know the game is successfully in progress if a timer pops up in your game status. </p>
+<p> You can change your shoot choice any time before the timer runs out. </p>
+<p> You should get the result of your game within a few seconds of that time, otherwise something has gone wrong. </p>
 <hr>
 <p> For more info: <a href="about.html">click here (about)</a>.
 <hr>
-<p> If you're still having problems, contact <strong>~bacwyl-samweg</strong> or uninstall the app by entering: </p>
-<tt>|uninstall %roshambo</tt>
-<p> in your dojo.</p>
+<p> If you're still having problems, contact <a href="/apps/landscape/~profile/~bacwyl-samweg/">~bacwyl-samweg</a></p>
 </div>
 
 </body>
