--- a/glob/index.html
+++ b/glob/index.html
@@ -4,9 +4,9 @@
 <head>
   <title>%roshambo</title>
 
+  <link rel="shortcut icon" href="img/bacwyls.png" type="image/x-icon">
   <link rel="stylesheet" href="styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
   <script src="bundle.js"></script>
@@ -68,8 +68,8 @@
     <span id="rshb-them-play"> ~ </span>
   <br>
 
-  <div id="rshb-winner-block">
-    <span id="rshb-winner-msg">...</span>
+  <div id="rshb-status-block">
+    <span id="rshb-status-msg">...</span>
   </div>
 
   <hr>
