--- a/glob/about.html
+++ b/glob/about.html
@@ -4,6 +4,7 @@
 <head>
   <title>%roshambo</title>
 
+  <link rel="shortcut icon" href="img/bacwyls.png" type="image/x-icon">
   <link rel="stylesheet" href="styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -27,25 +28,39 @@
 <div style="text-align:left">
 <h1> About </h1>
 <p> Developed by <strong>~bacwyl-samweg</strong></p>
+<img src="img/bacwyls.png" class="dev-avatar">
 <p> Source: <a href="https://github.com/bacwyls/roshambo"> click here </a> </p>
 <hr>
-<p> roshambo is a messy gall app made for fun.</p>
-<p> Out of laziness, I decided not to bother with a frontend framework. So this is just hand-made HTML/CSS/JS bundled with @urbit/http-api and urbit-ob using browserify.</p>
-<p> A bonus of this is that the frontend logic is simple and legible, so you can read the source if you're worried about malicious frontend code.</p>
+<p> roshambo is a gall app with a web interface and a dojo interface</p>
 <hr>
-<h2> Play roshambo in dojo </h2>
+<h2> gall app </h2>
+<p> most of the logic is to accomplish the following: </p>
+<p> if two users tell their agents to %poise against one another, the agents will chat until they settle on a time window. </p>
+<p> they'll set %behn timers for t0, and theyll listen for the opponent from t0 until t0+n </p>
+<p>-</p>
+<p> then theres some ugly stuff about how I'm dealing with http-api inputs &amp; conditional (?verbose) debug prints.</p>
+<hr>
+<h2> web interface </h2>
+<p> This frontend is hand-written HTML/CSS/JS bundled with http-api and urbit-ob using <a href="https://browserify.org/">browserify</a>.</p>
+<p> The <a href="script.js">UI logic</a> is a short (messy) list of click event functions and a few calls to http-api. </p>
+<hr>
+<h2> dojo interface </h2>
 <p> Step 1: set the app to verbose mode. </p>
+<blockquote>
 <tt>:roshambo|verbose &amp;</tt>
-<br><br>
+</blockquote>
+<br>
 <p> Step 2: <strong>shoot</strong> </p>
+<blockquote>
 <tt>:roshambo|shoot %r</tt><br>
-or
 <tt>:roshambo|shoot %p</tt><br>
-or
 <tt>:roshambo|shoot %s</tt>
-<br><br>
+</blockquote>
+<br>
 <p> Step 3: <strong>poise</strong> </p>
+<blockquote>
 <tt>:roshambo|poise ~sampel-palnet</tt><br>
+</blockquote>
 <p> When you and an opponent <strong>poise</strong> against one another, your agents negotiate an exact time at which they will share <strong>shoot</strong> values.</p>
 <p> this time will be printed to the screen. You can change your <strong>shoot</strong> any time before the shoot-time. </p>
 <br>
@@ -56,14 +71,20 @@ or
 <hr>
 <h3> Other commands </h3>
 <p> latency and poise-delay are @dr values used in negotiating a game. They have default values which may not be ideal for play depending on the quality of your p2p connection. These could be increased for a slow connection, or decreased for a fast connection. </p>
+<blockquote>
 <tt>:roshambo|latency ~sX</tt><br>
+</blockquote>
 <p> sets your latency value to X seconds. </p>
 <p> If I have a latency of X seconds, my agent will accept a shoot until X seconds after the shoot-time.</p>
-<p> If too long, the opponent could technically cheat. Too short and your packets won't ever make it. </p>
+<p> This can be generous. Too short (&lt; actual_latency) and your shoots won't make it in time.</p>
+<p>If its too long (&gt; 2 * actual_latency), then someone with a modded %roshambo could technically cheat. But thats pretty unlikely.</p>
 <br>
+<blockquote>
 <tt>:roshambo|poise-delay ~sY</tt><br>
+</blockquote>
 <p> sets your poise-delay value to Y seconds. </p>
 <p> If I have a poise-delay of Y seconds, the shoot-time for my game will be at least Y seconds after I poise. </p>
+<p> Give it enough for your agents to poke back and forth a few times. </p>
 <p> Agents settle on the larger poise-delay. </p>
 </div>
 
