--- a/glob/help.html
+++ b/glob/help.html
@@ -8,30 +8,24 @@
   <link rel="stylesheet" href="styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
 </head>
 
 <body>
 
-<div id="rshb-header">
+<div id="header">
 <h1>%roshambo</h1>
-<p id="rshb-runes"style="font-family:monospace">:: [] >%</p>
-</div>
-<a href="/">garden</a> . . . .
-<a href="index.html">home</a> . . . .
-<a href="help.html">help</a> . . . .
+<a href="/">garden</a>
+<a href="index.html">home</a>
+<a href="help.html">help</a>
 <a href="about.html">about</a>
-<br>
-<hr>
+</div>
 
 <div style="text-align:left">
 <h1> Help </h1>
 <p> roshambo requires two active players. </p>
-<p> Find someone to play with, enter their name, and decide on a time when you will both SHOOT. </p>
-<p> Then, press SHOOT at around the same time. </p>
-<p> You'll know the game is successfully in progress if a timer pops up in your game status. </p>
-<p> You can change your shoot choice any time before the timer runs out. </p>
+<p> You'll know the game is successfully in progress if a yellow countdown timer appears. </p>
+<p> Make sure your choice is set before the timer runs out. </p>
+<p> You can change your choice any time before the timer runs out. </p>
 <p> You should get the result of your game within a few seconds of that time, otherwise something has gone wrong. </p>
 <hr>
 <p> For more info: <a href="about.html">click here (about)</a>.
