--- a/glob/help.html
+++ b/glob/help.html
@@ -23,10 +23,9 @@
 <div style="text-align:left">
 <h1> Help </h1>
 <p> roshambo requires two active players. </p>
-<p> You'll know the game is successfully in progress if a yellow countdown timer appears. </p>
-<p> Make sure your choice is set before the timer runs out. </p>
-<p> You can change your choice any time before the timer runs out. </p>
-<p> You should get the result of your game within a few seconds of that time, otherwise something has gone wrong. </p>
+<p> If you and your opponent SHOOT at roughly the same time, a yellow timer will appear. </p>
+<p> If you can't coordinate well enough, you can always both spam SHOOT until it works. </p>
+<p> Wait for the timer to run out, and the result of your game should appear shortly. </p>
 <hr>
 <p> For more info: <a href="about.html">click here (about)</a>.
 <hr>
