--- a/glob/about.html
+++ b/glob/about.html
@@ -68,7 +68,7 @@
 <p> If I have a poise-delay of Y seconds, the shoot-time for my game will be at least Y seconds after I poise. </p>
 <p> Give it enough for the opponent to poise back and agents to handshake. </p>
 <br>
-<p> Agents settle on the proposed time-window which is further in the future. </p>
+<p> Agents settle on whichever proposed time-window is further in the future. </p>
 </div>
 
 </body>
